# sarwaz

./: .gitignore  Cargo.toml  LICENSE.md  README.md
dataIdea/: data.txt  palette_and_presets.txt
src/: lib.rs  main.rs
src/core/: canvas.rs  mod.rs
src/launcher/: init.rs  launch.rs
src/utils/: helpers.rs
